[gd_scene load_steps=4 format=3 uid="uid://c4xmmv3ww4l3p"]

[ext_resource type="Script" path="res://Scripts/Enemies/EnemyRanged.gd" id="1_1at0e"]
[ext_resource type="Texture2D" uid="uid://vrfkmlq6h0im" path="res://icon.svg" id="2_eejnf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w56bn"]
radius = 35.0

[node name="EnemyRanged" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 10
motion_mode = 1
wall_min_slide_angle = 0.0
script = ExtResource("1_1at0e")

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.485003, 0.0242831, 0.532642, 1)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_eejnf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_w56bn")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
debug_path_custom_color = Color(1, 0, 0, 1)
debug_path_custom_line_width = 2.0

[node name="PathCalculationTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="RayCast2D" type="RayCast2D" parent="."]
collision_mask = 9

[node name="TrajectoryCheckLeft_RayCast2D" type="RayCast2D" parent="."]
position = Vector2(-25, 0)
collision_mask = 9

[node name="TrajectoryCheckRight_RayCast2D" type="RayCast2D" parent="."]
position = Vector2(25, 0)
collision_mask = 9

[connection signal="timeout" from="PathCalculationTimer" to="." method="_on_path_calculation_timer_timeout"]
